--- a/_posts/2017-06-25-xxx.md
+++ b/_posts/2017-06-25-xxx.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "xx"
+title:  "xx222"
 date:   2017-05-25 21:10:49 +0900
 categories: jekyll update
 ---
-xxx
+xxx222
 
 $$a^2 + b^2 = c^2$$
 
